--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
         "console": "strapi console",
         "deploy": "strapi deploy",
         "dev": "strapi develop",
-        "seed": "node ./scripts/seed.js",
+        "develop": "strapi develop",
         "start": "strapi start",
         "strapi": "strapi",
         "upgrade": "npx @strapi/upgrade latest",
@@ -18,8 +18,6 @@
         "@strapi/plugin-cloud": "5.25.0",
         "@strapi/plugin-users-permissions": "5.25.0",
         "@strapi/strapi": "5.25.0",
-        "fs-extra": "^10.0.0",
-        "mime-types": "^2.1.27",
         "pg": "8.8.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
@@ -37,7 +35,7 @@
         "npm": ">=6.0.0"
     },
     "strapi": {
-        "uuid": "09587fe6-e500-4d19-8b9b-35dc914fa356",
-        "installId": "de20c475e008b2bf9b941ebc92ef0fb9ef0853d600c8886ce9de30b12c5e3a5a"
+        "uuid": "de796ee7-22e7-498f-83ca-d19aff85be37",
+        "installId": "2f386684988f384f8106b0d464a1563cfdcae2f3c6b1973771915e041ac4d200"
     }
 }
