--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
         "react-dom": "19.1.0",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
-        "yup": "^1.7.1"
+        "yup": "^1.7.1",
+        "zustand": "^5.0.8"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
