--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
         "clsx": "^2.1.1",
         "formik": "^2.4.6",
         "lucide-react": "^0.544.0",
+        "markdown-it": "^14.1.0",
         "next": "15.5.4",
         "next-themes": "^0.4.6",
         "qs": "^6.14.0",
@@ -33,6 +34,7 @@
     "devDependencies": {
         "@eslint/eslintrc": "^3",
         "@tailwindcss/postcss": "^4",
+        "@types/markdown-it": "^14.1.2",
         "@types/node": "^20",
         "@types/qs": "^6.14.0",
         "@types/react": "^19",
